# cody

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .eslintcache  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitignore.orig  .gitmodules  .npmrc  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc.json  .tool-version  .tool-versions  .use-mise  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUARDRAILS.md  README.md  TESTING.md  TODO  biome.json  biome.jsonc  build.gradle.kts  diff  features.json5  gradle.properties  index.ts  install-ldid.sh  knip.jsonc  package-lock.json  package.json  (+15 more)
.cody/: ignore
.config/: viteShared.ts
.github/: CICD_UPDATE_RECORDINGS.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.grit/: grit.yaml
.openctx/: includeReadme.js
.sourcegraph/: amp.json  array-index-bug.rule.md  asynchronous-functions-bug.rule.md  bash-file-formatting.rule.md  bash-style.rule.md  brand-names.rule.md  check-repo-perms.rule.md  conditional-bug.rule.md  control-flow-bug.rule.md  csp-xss.rule.md  external_url.rule.md  floats-integers-bug.rule.md  logic.rule.md  (+27 more)
lib/noxide/: Cargo.toml  README.md  dist.ts  package.json  tsconfig.json
lib/noxide/node/: index.ts  noxide.darwin-arm64.node  noxide.darwin-x64.node  noxide.linux-arm64-gnu.node  noxide.linux-arm64-musl.node  noxide.linux-x64-gnu.node  noxide.linux-x64-musl.node  noxide.win32-arm64-msvc.node  noxide.win32-x64-msvc.node  types.ts
lib/noxide/src/: errext.rs  jslog.rs  lib.rs  netconfig.rs
lib/noxide/test/: config.test.ts  lib.test.ts
(+6846 files in other folders)
